--- a/src/app/page.module.css
+++ b/src/app/page.module.css
@@ -1,11 +1,28 @@
+.headerTitle {
+  position: relative;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 1rem;
+  min-height: 80px;
+  border-bottom: 1px solid #ccc;
+  width: 100%;
+}
+
+
 .title{
   color: var(--primary);
   text-align: center;
-  box-shadow: 0 3px 0 var(--shadow);
-  padding: 16px;
-  margin-top: 0;
+  margin: 0;
 }
 
 .titleSecondWord {
   color: var(--secondary);
+}
+
+.loginButtonContainer {
+  position: absolute;
+  right: 1rem;
+  top: 20%;
+  transform: translateY(-50%);
 }
